fix: loading container centered on mobile

--- a/angular/src/app/shared/loading/loading.component.sass
+++ b/angular/src/app/shared/loading/loading.component.sass
@@ -134,3 +134,5 @@
         font-size: .4rem
         height: 50px
         padding: 18px
+        justify-content: space-evenly
+        gap: unset
